chore: add list cream router to swagger and validation filter params
